--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -3,9 +3,9 @@
 {% block content %}
 
 <div class="jumbotron">
-    <h1>Django</h1>
-    <p class="lead">Django is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="https://www.djangoproject.com/" class="btn btn-primary btn-large">Learn more &raquo;</a></p>
+    <h1>武汉市荣衡外贸有限公司</h1>
+    <p class="lead">业界领先的外贸公司。</p>
+    <p><a href="https://www.djangoproject.com/" class="btn btn-primary btn-large">了解更多 &raquo;</a></p>
 </div>
 
 <div class="row">
