--- a/app/templates/app/loginpartial.html
+++ b/app/templates/app/loginpartial.html
@@ -2,8 +2,8 @@
 <form id="logoutForm" action="/logout" method="post" class="navbar-right">
     {% csrf_token %}
     <ul class="nav navbar-nav navbar-right">
-        <li><span class="navbar-brand">Hello {{ user.username }}!</span></li>
-        <li><a href="javascript:document.getElementById('logoutForm').submit()">Log off</a></li>
+        <li><span class="navbar-brand">您好 {{ user.username }}！</span></li>
+        <li><a href="javascript:document.getElementById('logoutForm').submit()">退出</a></li>
     </ul>
 
 </form>
@@ -11,7 +11,7 @@
 {% else %}
 
 <ul class="nav navbar-nav navbar-right">
-    <li><a href="{% url 'login' %}">Log in</a></li>
+    <li><a href="{% url 'login' %}">登录</a></li>
 </ul>
 
 {% endif %}
